# ProcessLecroyWF

./: .gitignore  CMakeLists.txt  ConvertAllTRC.cpp  ProcessTree.cpp  README.md  rootlogon.C  test.cpp
lcparser/: CMakeLists.txt  lcparser.h  lcparserUX.cxx  linkdef.h  makefile
lcparser/include/: WFDataConverter.h
lcparser/src/: WFDataConverter.cpp  lcparser.cpp
libs/: CMakeLists.txt
libs/analyze/: CMakeLists.txt
libs/analyze/include/: LinearRct.h  VPRAlgorithm.h
libs/analyze/src/: LinearRct.cpp  VPRAlgorithm.cpp
libs/lcparser/: CMakeLists.txt
libs/lcparser/include/: WFDataConverter.h
libs/lcparser/src/: WFDataConverter.cpp
tests/: CMakeLists.txt  process_sr90.cpp  test_analyze.cpp  test_prdata.cpp  test_wfdata.cpp
